--- a/.github/workflows/angular-ci.yml
+++ b/.github/workflows/angular-ci.yml
@@ -38,9 +38,9 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     permissions:
-      contents: write
+      contents: read
       pages: write
-      id-token: write # Nécessaire pour l'authentification si vous utilisez OIDC
+      id-token: write
 
     steps:
     - uses: actions/checkout@v4
@@ -57,12 +57,11 @@ jobs:
     - name: Build Angular app
       run: npm run build
 
-    - name: List build directory contents
-      run: ls -R dist/
+    - name: Upload GitHub Pages artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: ./dist/todolist-frontend-real # C'est le dossier de sortie de ng build
 
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/main'
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist/todolist-frontend-real
+      id: deployment
+      uses: actions/deploy-pages@v4
