--- a/.github/workflows/angular-ci.yml
+++ b/.github/workflows/angular-ci.yml
@@ -60,7 +60,7 @@ jobs:
     - name: Upload GitHub Pages artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        path: ./dist/todolist-frontend-real # C'est le dossier de sortie de ng build
+        path: ./dist/todolist-frontend-real/browser # <-- Modifier cette ligne
 
     - name: Deploy to GitHub Pages
       id: deployment
